FIX "Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode."

--- a/src/css/themes/infragistics/modules/infragistics.ui.grid.less
+++ b/src/css/themes/infragistics/modules/infragistics.ui.grid.less
@@ -271,10 +271,10 @@
 }
 
 
-.ui-iggrid tbody td {
+/*.ui-iggrid tbody td {
   border-left: 1px solid transparent!important;
   border-right: 1px solid transparent!important;
-}
+}*/
 .ui-iggrid tbody td,
 .ui-iggrid tbody th.ui-iggrid-rowselector-class,
 .ui-iggrid thead .ui-iggrid-editingcell,
